[project]
name = "traffcoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pycountry>=26.2.16",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
